--- a/DadJoker.csproj
+++ b/DadJoker.csproj
@@ -10,7 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.18" />
     <PackageReference Include="Okta.AspNetCore" Version="3.1.0" />
   </ItemGroup>
 
@@ -25,6 +27,10 @@
     <Reference Include="FBLib">
       <HintPath>..\FBLib\bin\Debug\netcoreapp3.0\FBLib.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\src\images\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
