--- a/DadJoker.csproj
+++ b/DadJoker.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\images\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
